Bug 1466802 - Also open non-mailnews URLs in nsMessengerContentHandler::HandleContent. r=aceman